@@ -1,3 +1,11 @@
+2012-12-27 Paulo Andrade <pcpa@gnu.org>
+
+	* lib/jit_arm.c, lib/jit_mips-cpu.c, lib/jit_mips.c: Correct
+	regressions when patching jit_calli for a forward function.
+
+	* lib/jit_ppc-cpu.c: Correct wrong arguments to ANDI opcode
+	in jit_getarg_u{c,s} implementation.
+
 2012-12-23 Paulo Andrade <pcpa@gnu.org>
 
 	* check/call.ok, check/call.tst: New test cases to validate
